# BnBCore

./: .gitignore  CMakeLists.txt  README.md
include/: Base.h  BnB_MPI_Solver.h  BnB_OMP_Solver.h  BnB_Serial_Solver.h  BnB_Solver.h  Knapsack.h  MPI_Message_Encoder.h  MPI_Scheduler.h  MPI_Scheduler_Default.h  MPI_Scheduler_Hybrid.h  MPI_Scheduler_OneSided.h  MPI_Scheduler_Priority.h  OMP_Scheduler.h  OMP_Scheduler_Default.h
include/Core/: Base.h  BnB_Serial_Solver.h  BnB_Solver.h  IP.h  Knapsack.h  Serial_Scheduler.h  Serial_Scheduler_Default.h  Simplex.h  TSP.h
include/Distributed/: BnB_MPI_Solver.h  MPI_Message_Encoder.h  MPI_Scheduler.h  MPI_Scheduler_Hybrid.h  MPI_Scheduler_MasterWorker.h  MPI_Scheduler_OneSided.h  MPI_Scheduler_Priority.h  MPI_Scheduler_WorkerOnly.h
include/Shared/: BnB_OMP_Solver.h  OMP_Scheduler.h  OMP_Scheduler_Queue.h  OMP_Scheduler_Tasking.h
src/: main.cpp
tests/: CMakeLists.txt  EncoderTests.cpp  MPIKnapsackTest.cpp  OpenMPKnapsackTest.cpp
